--- a/TP/TP3.ipynb
+++ b/TP/TP3.ipynb
@@ -541,6 +541,65 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## <font color='blue'> For your information : images with tensor </font>"
+      ],
+      "metadata": {
+        "id": "C8Tn9948rPEw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Quand on ouvre une image avec torch, elle est au format \"pil\"\n",
+        "- On peut la convertir en tensor, elle sera de shape [3,M,N], à valeurs dans [0,1]\n",
+        "- Pour convertir un tensor en format pil, il faut d'abord appliquer un *.clip(0,1)* pour le rendre à valeurs dans [0,1]\n",
+        "- Pour l'afficher, il faut la re-convertir en format pil et utiliser *display*\n",
+        "- Pour l'enregistrer, il faut la re-convertir en format pil et utiliser *.save('nom.png')*\n",
+        "- Pour afficher une image en tensor avec plt.imshow, il faut la convertir en numpy et la transformer en shape [M,N,3]\n",
+        "- L'avantage de display est que cela rend compte de la vraie taille de l'image. *plt.imshow()* effectue des interpolations cachées."
+      ],
+      "metadata": {
+        "id": "OYLy_httt7ru"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torchvision.transforms.functional import to_tensor, to_pil_image\n",
+        "from IPython.display import display\n",
+        "from PIL import Image\n",
+        "import os\n",
+        "\n",
+        "#Open an image\n",
+        "os.system(\"wget -c  https://www.idpoisson.fr/abraham/IMAGES/logo-big.png\")\n",
+        "img_pil = Image.open(\"logo-big.png\")\n",
+        "\n",
+        "#Afficher l'image\n",
+        "img_as_tensor = to_tensor(img_pil)\n",
+        "img_as_tensor = img_as_tensor.clip(0,1) #Le clip sert à assurer que les valeurs de l'images soient comprises entre 0 et 1 ( évite un warning de Python )\n",
+        "pil_img = to_pil_image(img_as_tensor) #Ceci convertit le tensor au Format PIL\n",
+        "display(pil_img)\n",
+        "\n",
+        "#Enregistrer l'image\n",
+        "#pil_img.save('logo.png')\n",
+        "\n",
+        "#si on voulait utiliser plt.imshow\n",
+        "import pylab as plt \n",
+        "import numpy as np\n",
+        "npimg = img_as_tensor.numpy()\n",
+        "plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "KWD6u7LfrMlp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##  <font color='blue'> Exercise (eventually done during the next TP) </font>"
       ],
       "metadata": {
