--- a/TP/TP3.ipynb
+++ b/TP/TP3.ipynb
@@ -167,12 +167,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Neural Networks\n"
+      ],
+      "metadata": {
+        "id": "Ijv3_YISBvY9"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "QfvGF-ftcLHQ"
       },
       "source": [
-        "\n",
-        "# Neural Networks\n",
         "\n",
         "Neural networks can be constructed using the ``torch.nn`` package.\n",
         "\n",
@@ -572,24 +580,26 @@
         "import os\n",
         "\n",
         "#Open an image\n",
-        "os.system(\"wget -c  https://www.idpoisson.fr/abraham/IMAGES/logo-big.png\")\n",
-        "img_pil = Image.open(\"logo-big.png\")\n",
+        "os.system(\"wget -c  https://render.fineartamerica.com/images/rendered/default/framed-print/images-medium-5/simeon-denis-poisson-french-physicist-science-source.jpg?imgWI=7.5&imgHI=10&sku=CRQ13&mat1=PM918&mat2=&t=2&b=2&l=2&r=2&off=0.5&frameW=0.875\")\n",
+        "img_pil = Image.open(\"simeon-denis-poisson-french-physicist-science-source.jpg?imgWI=7.5\")\n",
         "\n",
         "#Afficher l'image\n",
         "img_as_tensor = to_tensor(img_pil)\n",
+        "print(img_as_tensor.shape)\n",
         "img_as_tensor = img_as_tensor.clip(0,1) #Le clip sert à assurer que les valeurs de l'images soient comprises entre 0 et 1 ( évite un warning de Python )\n",
         "pil_img = to_pil_image(img_as_tensor) #Ceci convertit le tensor au Format PIL\n",
         "display(pil_img)\n",
         "\n",
         "#Enregistrer l'image\n",
-        "#pil_img.save('logo.png')\n",
+        "#pil_img.save('Simeon.png')\n",
         "\n",
         "#si on voulait utiliser plt.imshow\n",
         "import pylab as plt \n",
         "import numpy as np\n",
         "npimg = img_as_tensor.numpy()\n",
+        "print(np.transpose(npimg, (1, 2, 0)).shape)\n",
         "plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
-        "plt.show()"
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "KWD6u7LfrMlp"
