--- a/TP/Projet_2023.ipynb
+++ b/TP/Projet_2023.ipynb
@@ -11,7 +11,7 @@
         "## Consignes\n",
         "\n",
         "### Date et modalité\n",
-        "Ce projet est à rendre au plus tard pour le  jeudi 30 avril. ([git](https://github.com/emilePi/Apprentissage-pour-l-image)).\n",
+        "Ce projet est à rendre au plus tard pour le  dimanche 30 avril. ([git](https://github.com/emilePi/Apprentissage-pour-l-image)).\n",
         "Les projets sont à envoyer par email à \n",
         "\n",
         "  ```\n",
