--- a/TP/TP2.ipynb
+++ b/TP/TP2.ipynb
@@ -1124,7 +1124,7 @@
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "\n",
-        "d = 3\n",
+        "d = 5\n",
         "class Net(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
@@ -1138,7 +1138,8 @@
         "        return x\n",
         "\n",
         "\n",
-        "net = Net()"
+        "net = Net()\n",
+        "net2 = Net()"
       ],
       "metadata": {
         "id": "3gnz-IMOrCRM"
@@ -1160,7 +1161,7 @@
       "cell_type": "code",
       "source": [
         "net.fc1.bias.requires_grad = False\n",
-        "net.fc1.weight.requires_grad = False"
+        "net.fc1.weight.requires_grad = False\n"
       ],
       "metadata": {
         "id": "wQTuzywMSSs4"
@@ -1180,9 +1181,36 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "\n",
+        "W1 =torch.randn(d,2)\n",
+        "b1 = torch.randn(d)\n",
+        "net.fc2.bias = torch.nn.Parameter(b1)\n",
+        "net.fc2.weight = torch.nn.Parameter(W1)\n",
+        "net2.fc2.bias = torch.nn.Parameter(b1)\n",
+        "net2.fc2.weight = torch.nn.Parameter(W1)\n",
+        "\n",
+        "\n",
+        "W2 =torch.randn(3,d)\n",
+        "b2 = torch.randn(3)\n",
+        "net.fc2.bias = torch.nn.Parameter(b2)\n",
+        "net.fc2.weight = torch.nn.Parameter(W2)\n",
+        "net2.fc2.bias = torch.nn.Parameter(b2)\n",
+        "net2.fc2.weight = torch.nn.Parameter(W2)"
+      ],
+      "metadata": {
+        "id": "m6M2IK8lRoni"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import torch.optim as optim\n",
         "criterion = nn.CrossEntropyLoss()\n",
-        "optimizer = optim.SGD(net.parameters(), lr=0.1)"
+        "optimizer = optim.SGD(net.parameters(), lr=0.75)\n",
+        "optimizer2 = optim.SGD(net2.parameters(), lr=0.75)"
       ],
       "metadata": {
         "id": "GelGzSP1rXd1"
@@ -1194,16 +1222,22 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "for epoch in range(10**4):  # loop over the dataset multiple times\n",
+        "for epoch in range(10**3):  # loop over the dataset multiple times\n",
         "    # zero the parameter gradients\n",
         "    optimizer.zero_grad()\n",
+        "    optimizer2.zero_grad()\n",
         "    # forward + backward + optimize\n",
         "    output = net(X_train)\n",
         "    loss = criterion(output, t_train)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
+        "    # forward + backward + optimize\n",
+        "    output2 = net2(X_train)\n",
+        "    loss2 = criterion(output2, t_train)\n",
+        "    loss2.backward()\n",
+        "    optimizer2.step()\n",
         "\n",
-        "print('Finished Training')"
+        "print('Finished Training')\n"
       ],
       "metadata": {
         "id": "uaeGnHcRryIj"
@@ -1227,8 +1261,11 @@
         "X_grid = np.c_[xx.ravel(), yy.ravel()]\n",
         "\n",
         "feature_transform = lambda x : (net(torch.tensor(x, dtype=torch.float32).unsqueeze(0)).detach().numpy())\n",
+        "feature_transform2 = lambda x : (net2(torch.tensor(x, dtype=torch.float32).unsqueeze(0)).detach().numpy())\n",
+        "\n",
         "\n",
         "Phi_grid = feature_transform(X_grid)\n",
+        "Phi_grid2 = feature_transform2(X_grid)\n",
         "\n",
         "Z =np.argmax(Phi_grid,axis=2)\n",
         "Z = Z.reshape(xx.shape)\n",
@@ -1241,6 +1278,19 @@
         "ax = plt.subplot(1,2,2)\n",
         "cmap = ListedColormap(['b','y','r','m','g','c'])\n",
         "plt.contourf(xx,yy,Z,  cmap = cmap, alpha=.8)\n",
+        "ax.scatter(X_train[:, 0], X_train[:, 1], marker='o', c=t_train, s=50, edgecolor='k')\n",
+        "ax.scatter(X_test[:, 0], X_test[:, 1], marker='P', c=t_test, s=50, edgecolor='k')\n",
+        "\n",
+        "Z2 =np.argmax(Phi_grid2,axis=2)\n",
+        "Z2 = Z2.reshape(xx.shape)\n",
+        "figure = plt.figure(figsize=(16, 8))\n",
+        "ax = plt.subplot(1,2,1)\n",
+        "ax.set_title(\"Input data\")\n",
+        "ax.scatter(X_train[:, 0], X_train[:, 1], marker='o', c=t_train, s=50, edgecolor='k')\n",
+        "ax.scatter(X_test[:, 0], X_test[:, 1], marker='P', c=t_test, s=50, edgecolor='k')\n",
+        "ax = plt.subplot(1,2,2)\n",
+        "cmap = ListedColormap(['b','y','r','m','g','c'])\n",
+        "plt.contourf(xx,yy,Z2,  cmap = cmap, alpha=.8)\n",
         "ax.scatter(X_train[:, 0], X_train[:, 1], marker='o', c=t_train, s=50, edgecolor='k')\n",
         "ax.scatter(X_test[:, 0], X_test[:, 1], marker='P', c=t_test, s=50, edgecolor='k')"
       ],
