--- a/TP/TP3.ipynb
+++ b/TP/TP3.ipynb
@@ -71,8 +71,7 @@
         "1. Implémentez la matrice ```A``` et le vecteur ```b``` dans ```torch``` avec $n = 20$\n",
         "2. Calculez le gradient d'un vecteur aléatoire ```x``` par rapport à ```F``` avec ```torch.autograd```\n",
         "3. Vérifiez que le calcul du gradient est correct.\n",
-        "4. Implémenter une descente de gradient à pas constant pour résoudre le problème avec ```10**3``` itérations et un taux d'apprentissage égal à ```0.1``` .\n",
-        "5. Implémentez-le en utilisant ```torch.optim.SGD```, un taux d'apprentissage égal à 0,1, un momentum égal à 0,9 et ```10**3``` itérations."
+        "4. Implémentez-le en utilisant ```torch.optim.SGD```, un taux d'apprentissage égal à 0,1, un momentum égal à 0,9 et ```10**3``` itérations."
       ],
       "metadata": {
         "id": "tTNRxtk94FhD"
@@ -81,10 +80,52 @@
     {
       "cell_type": "code",
       "source": [
-        "#TODO"
+        "#1. #TODO"
       ],
       "metadata": {
         "id": "E5CGin6c9dF2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2. #TODO"
+      ],
+      "metadata": {
+        "id": "rWoUvIogIpWq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3. #TODO"
+      ],
+      "metadata": {
+        "id": "TVd26c1gItu6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#4.\n",
+        "\n",
+        "Nit = #TODO\n",
+        "optim = torch.optim.SGD(___, lr=___,momentum=__) #TODO\n",
+        "\n",
+        "for k in range(Nit) :\n",
+        "  F = #TODO\n",
+        "         #Compute the gradient\n",
+        "  optim.step()\n",
+        "         #And ?"
+      ],
+      "metadata": {
+        "id": "vQwRSIcIIySE"
       },
       "execution_count": null,
       "outputs": []
