--- a/TP/TP4.ipynb
+++ b/TP/TP4.ipynb
@@ -838,7 +838,7 @@
       "source": [
         "Si cela ne fonctionne pas :\n",
         "\n",
-        "1. Télécharger l'image à ce lien :     \n",
+        "1. Télécharger l'image à ce lien : https://github.com/emilePi/denis\n",
         "2. Enregistrer-la dans le dossier de votre choix\n",
         "3. Compléter la cellule ci-dessous en mettant PATH= \"le chemin vers le dossier précédent\". (Par exemple PATH = 'C:/Documents/Apprentissage pour l'image/Cours/TP4/')"
       ],
